--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <h4>container tag</h4>
     <h4>empty tag</h4>
     <p><b>Today</b>the first day of <em>vac session </em>has held good and undersyand the<strong>basic.</strong> <br><i>lets see about the upcoming sessions.</i></p>
-    <ol>
-        <li></li>
-    </ol>
+    <p>H<sub>2</sub>0</p>
+    <p>4<sup>2</sup>=16</p>
 </body>
 </html>
