--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <li>eight</li>
         <li><img src ="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcTNkOM-uGOWzKRhRGyot-zWJAj3s3zuhn6SbWnEncOpRJEm9sD8dUZtO6EfRgFT800RUHUxawowj0Kp3zrSwuiH_Jaofx0UvNroJ2OCEuVE"</li>
     </ul>
-    <a href="about.html" target ="_self"link></a>
+    <a href="about.html" target ="_self">link</a>
     <p>H<sub>2</sub>0</p>
     <p>4<sup>2</sup>=16</p>
 </body>
