--- a/about.html
+++ b/about.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="https://booklinker.com/" target ="_self"link></a>
+    <a href="https://news.google.com/" target ="_self">link</a>
 </body>
 </html>
