--- a/table.html
+++ b/table.html
@@ -15,6 +15,10 @@
             <td>apple</td>
             <td>potato</td>
         </tr>
+        <tr>
+            <td>mango</td>
+            <td>brinjal</td>
+        </tr>
     </table>
     
     
