--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .select{
+            color:blueviolet;
+        }
+    </style>
 </head>
 <body><h2>my checkbox</h2>
     <label>
@@ -35,6 +40,8 @@
     <a href="about.html"target="_self">link</a>
     <br>
     <a href="table.html"target="_self">link</a>
+    <br>
+    <a href="potfolio.html">portolio</a>
 
     
 
