--- a/index.html
+++ b/index.html
@@ -4,11 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        .select{
-            color:blueviolet;
-        }
-    </style>
 </head>
 <body><h2>my checkbox</h2>
     <label>
@@ -42,6 +37,8 @@
     <a href="table.html"target="_self">link</a>
     <br>
     <a href="potfolio.html">portolio</a>
+    <br>
+    <a href="parent.html">portfolio</a>
 
     
 
