--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
     <a href="potfolio.html">portolio</a>
     <br>
     <a href="parent.html">portfolio</a>
+    <br>
+    <a href="style.css">css</a>
 
     
 
