--- a/table.html
+++ b/table.html
@@ -4,8 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <p class="margin">qwertyuiopasdfghjkllzxcvbnm</p>
+    <table class="border">
+    <tr>
+        <th class="border">Name</th>
+        <th class="border">Age</th>
+        <th class="border">Place</th>
+    </tr>
+    <tr>
+        <th class="border">NEYMAR</th>
+        <th class="border">42</th>
+        <th class="border">DELHI</th>
+    </tr>
+
+</table>
     <table>
         <tr>
             <th>fruits</th>
