--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <br>
     <a href="parent.html">portfolio</a>
     <br>
-    <a href="style.css">css</a>
+    <a href="position.html">css</a>
 
     
 
