--- a/position.html
+++ b/position.html
@@ -12,11 +12,8 @@
         <div class="relative">
             <p>from relative</p>
         </div>
-
     <div class="page">
-        <p class="fixed">
-            fixed content
-        </p>
+        <p class="fixed">fixed content</p>
     </div>
     <div class="page" >
         <p>page</p>
